[package]
name = "mattro"
description = "A macro attribute parser"
version = "0.1.1"
authors = ["Freddy L."]
edition = "2018"
keywords = ["api", "proc_macro_attribute", "parser", "attributes"]
category = "rust-patterns"
license = "MIT"
repository = "https://github.com/Neo-Ciber94/mattro-rs"
homepage = "https://crates.io/crates/mattro"
documentation = "https://docs.rs/mattro"
readme = "README.md"

[dependencies]
proc-macro2 = "1.0.27"
syn = { version = "1.0.73", features = ["extra-traits"]}
quote = "1.0.7"
linked_hash_set = "0.1.4"